<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <EditText
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="107dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/nom"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/dialogButtonOK"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="156dp"
        android:text="@string/ok_button"
        android:visibility="visible" />

    <TextView
        android:id="@+id/txtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="@string/msg_dialog"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/dialog_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/abrirCamara"
        android:layout_width="76dp"
        android:layout_height="47dp"
        android:layout_alignTop="@+id/dialogButtonOK"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="62dp"
        android:layout_toEndOf="@+id/dialogButtonOK"
        app:srcCompat="@drawable/ic_add_a_photo" />

</RelativeLayout>